[gd_scene load_steps=18 format=2]

[ext_resource path="res://scene/Menu/OPTION/option.gd" type="Script" id=1]
[ext_resource path="res://scene/Menu/OPTION/MENUButton.gd" type="Script" id=2]
[ext_resource path="res://Resource/img/icones8.fr/icons8-xbox-a-100.png" type="Texture" id=3]
[ext_resource path="res://Resource/img/icones8.fr/icons8-great-britain-48.png" type="Texture" id=4]
[ext_resource path="res://Resource/img/icones8.fr/icons8-france-48.png" type="Texture" id=5]

[sub_resource type="VisualScriptFunction" id=1]

resource_name = "_process"
_default_input_values = [  ]
argument_count = 1
argument_1/type = 3
argument_1/name = "delta"
sequenced/sequenced = true
stack/size = 256
stack/stackless = false
rpc/mode = 0

[sub_resource type="VisualScriptDeconstruct" id=2]

_default_input_values = [ Vector2( 0, 0 ) ]
type = 5
elem_cache = [ "x", 3, "y", 3 ]

[sub_resource type="VisualScriptPropertySet" id=3]

_default_input_values = [ Vector2( 0, 0 ) ]
set_mode = 0
base_type = "Node2D"
type_cache = {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "position",
"type": 5,
"usage": 519
}
property = "position"
index = ""
assign_op = 0

[sub_resource type="VisualScriptConstructor" id=4]

_default_input_values = [ null, null ]
type = 5
constructor = {
"args": [ {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "x",
"type": 3,
"usage": 7
}, {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "y",
"type": 3,
"usage": 7
} ],
"default_args": [  ],
"flags": 1,
"id": 0,
"name": "Vector2",
"return": {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "",
"type": 5,
"usage": 7
}
}

[sub_resource type="VisualScriptExpression" id=5]

_default_input_values = [ 0.0 ]
expression = "a/4"
out_type = 3
input_count = 1
sequenced = false
input_0/type = 3
input_0/name = "a"
_sections_unfolded = [ "input_0" ]

[sub_resource type="VisualScriptExpression" id=6]

_default_input_values = [ 0.0 ]
expression = "(a/2)-20"
out_type = 3
input_count = 1
sequenced = false
input_0/type = 3
input_0/name = "a"
_sections_unfolded = [ "input_0" ]

[sub_resource type="VisualScriptFunctionCall" id=7]

_default_input_values = [  ]
call_mode = 4
base_type = "_OS"
singleton = "OS"
argument_cache = {
"args": [  ],
"default_args": [  ],
"flags": 9,
"id": 0,
"name": "",
"return": {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "",
"type": 6,
"usage": 7
}
}
function = "get_window_safe_area"
validate = true
rpc_call_mode = 0

[sub_resource type="VisualScriptDeconstruct" id=8]

_default_input_values = [ Rect2( 0, 0, 0, 0 ) ]
type = 6
elem_cache = [ "position", 5, "size", 5, "end", 5 ]

[sub_resource type="VisualScriptPropertySet" id=9]

_default_input_values = [ false ]
set_mode = 0
base_type = "Node2D"
type_cache = {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "visible",
"type": 1,
"usage": 1031
}
property = "visible"
assign_op = 0

[sub_resource type="VisualScriptFunctionCall" id=10]

_default_input_values = [ 0 ]
call_mode = 4
base_type = "ProjectSettings"
singleton = "ProjectSettings"
argument_cache = {
"args": [ {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "name",
"type": 4,
"usage": 7
} ],
"default_args": [  ],
"flags": 9,
"id": 0,
"name": "",
"return": {
"class_name": "",
"hint": 0,
"hint_string": "",
"name": "",
"type": 0,
"usage": 524295
}
}
function = "get_setting"
validate = true
rpc_call_mode = 0

[sub_resource type="VisualScriptConstant" id=11]

_default_input_values = [  ]
type = 4
value = "Config/input/Controler_Mode"

[sub_resource type="VisualScript" id=12]

data = {
"base_type": "Node2D",
"functions": [ {
"data_connections": [ 10, 1, 3, 0, 5, 0, 4, 0, 6, 0, 5, 0, 3, 0, 6, 0, 3, 1, 7, 0, 9, 0, 10, 0, 13, 0, 12, 0, 14, 0, 13, 0, 7, 0, 5, 1 ],
"function_id": 0,
"name": "_process",
"nodes": [ 0, Vector2( 0, 0 ), SubResource( 1 ), 3, Vector2( -380, 100 ), SubResource( 2 ), 4, Vector2( 140, 0 ), SubResource( 3 ), 5, Vector2( -20, 100 ), SubResource( 4 ), 6, Vector2( -200, 100 ), SubResource( 5 ), 7, Vector2( -200, 180 ), SubResource( 6 ), 9, Vector2( -860, 100 ), SubResource( 7 ), 10, Vector2( -600, 100 ), SubResource( 8 ), 12, Vector2( 280, 0 ), SubResource( 9 ), 13, Vector2( 160, 100 ), SubResource( 10 ), 14, Vector2( -20, 220 ), SubResource( 11 ) ],
"scroll": Vector2( -349.15, 88 ),
"sequence_connections": [ 0, 0, 4, 4, 0, 12 ]
} ],
"signals": [  ],
"variables": [  ]
}

[node name="BASE" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="GO_BACK" type="Button" parent="." index="0" groups=[
"L1",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_right = 100.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../FULL_SCREEN")
focus_previous = NodePath("../FULL_SCREEN")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MENU"
flat = false
align = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Focus", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Camera2D" type="Camera2D" parent="." index="1" groups=[
"L1",
]]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Node2D" type="Node2D" parent="." index="2" groups=[
"L1",
]]

script = SubResource( 12 )

[node name="Label" type="Label" parent="Node2D" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "ACCEPTER"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Sprite" type="Sprite" parent="Node2D/Label" index="0"]

position = Vector2( 74, 5 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="FULL_SCREEN" type="Button" parent="." index="3" groups=[
"Auto_focus",
"L1",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -20.0
margin_right = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_top = NodePath("../To_EN")
focus_neighbour_bottom = NodePath("../GO_BACK")
focus_next = NodePath("../GO_BACK")
focus_previous = NodePath("../To_FR")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "FULL SCREEN"
flat = false
align = 1
_sections_unfolded = [ "Focus", "Mouse", "Rect" ]

[node name="To_EN" type="Button" parent="." index="4" groups=[
"L1",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -100.0
margin_top = -74.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_right = NodePath("../To_FR")
focus_neighbour_bottom = NodePath("../FULL_SCREEN")
focus_next = NodePath("../To_FR")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "EN"
icon = ExtResource( 4 )
flat = false
align = 1
_sections_unfolded = [ "Focus", "Pause", "Rect" ]

[node name="To_FR" type="Button" parent="." index="5" groups=[
"L1",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -74.0
margin_right = 100.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_neighbour_left = NodePath("../To_EN")
focus_neighbour_bottom = NodePath("../FULL_SCREEN")
focus_next = NodePath("../FULL_SCREEN")
focus_previous = NodePath("../To_EN")
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "FR"
icon = ExtResource( 5 )
flat = false
align = 1
_sections_unfolded = [ "Focus", "Rect" ]

[node name="KEYBOARD_MODE" type="Node2D" parent="." index="6" groups=[
"KEYBOARD",
"L1",
]]

position = Vector2( -200, -80 )
_sections_unfolded = [ "Transform" ]

[node name="UP" type="Button" parent="KEYBOARD_MODE" index="0" groups=[
"KEYBOARD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="DOWN" type="Button" parent="KEYBOARD_MODE" index="1" groups=[
"KEYBOARD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEFT" type="Button" parent="KEYBOARD_MODE" index="2" groups=[
"KEYBOARD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="RIGHT" type="Button" parent="KEYBOARD_MODE" index="3" groups=[
"KEYBOARD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="PAUSE" type="Button" parent="KEYBOARD_MODE" index="4" groups=[
"KEYBOARD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="GAMEPAD_MODE" type="Node2D" parent="." index="7" groups=[
"GAMEPAD",
"L1",
]]

visible = false
position = Vector2( 100, -80 )
_sections_unfolded = [ "Transform" ]

[node name="ACCEPT" type="Button" parent="GAMEPAD_MODE" index="0" groups=[
"GAMEPAD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="SUB_SELECT" type="Button" parent="GAMEPAD_MODE" index="1" groups=[
"GAMEPAD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 20.0
margin_right = 100.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="LEFT2" type="Button" parent="GAMEPAD_MODE" index="2" groups=[
"GAMEPAD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="RIGHT2" type="Button" parent="GAMEPAD_MODE" index="3" groups=[
"GAMEPAD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 60.0
margin_right = 100.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="PAUSE" type="Button" parent="GAMEPAD_MODE" index="4" groups=[
"GAMEPAD",
]]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 80.0
margin_right = 100.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="GO_BACK" to="GO_BACK" method="_on_GO_BACK_pressed"]

[connection signal="pressed" from="FULL_SCREEN" to="." method="_on_FULL_SCREEN_pressed"]

[connection signal="pressed" from="To_EN" to="." method="_on_To_EN_pressed"]

[connection signal="pressed" from="To_FR" to="." method="_on_To_FR_pressed"]

[connection signal="pressed" from="KEYBOARD_MODE/UP" to="." method="_on_UP_pressed"]

[connection signal="pressed" from="KEYBOARD_MODE/DOWN" to="." method="_on_DOWN_pressed"]

[connection signal="pressed" from="KEYBOARD_MODE/LEFT" to="." method="_on_LEFT_pressed"]

[connection signal="pressed" from="KEYBOARD_MODE/RIGHT" to="." method="_on_RIGHT_pressed"]

[connection signal="pressed" from="KEYBOARD_MODE/PAUSE" to="." method="_on_PAUSE_pressed"]

[connection signal="pressed" from="GAMEPAD_MODE/ACCEPT" to="." method="_on_ACCEPT_pressed"]


